apps/argo-cd/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: http
      host: argocd.example.com
  tls:
    - hosts:
        - argocd.example.com
      secretName: argocd.example.com-secret
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: https
      host: grpc.argocd.example.com
  tls:
    - hosts:
        - grpc.argocd.example.com
      secretName: grpc.argocd.example.com-secret
